air/site/web/static/css/tasks.css
div#task-view {
  display: table;
  position: absolute;
  left: 0;
  top: 80px;
  padding: 0;
  margin: 0;

  /* Firefox */
  width: -moz-calc(100vw);
  /* WebKit */
  width: -webkit-calc(100vw);
  /* Opera */
  width: -o-calc(100vw);
  /* Standard */
  width: calc(100vw);
}


/********************************************************************
 * Menu bar
 *******************************************************************/

#infobox {
  float: right;
  padding: 7px 15px;
}

#infobox-message {
  margin-left: 5px;
  font-size: 0.8em;
  color: gray;
}

div#task-menu {
  border-bottom: 1px solid #ccc;
  height: 55px;
  display: block;
  width: 100%;
  padding: 10px 0 10px 0;
  font-size: 1.2em;
}

div#task-menu button {
  float: right;
  margin: 2px 10px 0 0;
}

div#task-menu button.selection {
  margin: -10px 0 -11px 0;
  display: block;
  height: 54px;
  border: 0;
  padding: 10px;
  background-color: white;
  border-left: 1px solid #ccc;
}

div#task-menu button.selection:hover {
  background-color: #F0F0F0;
}

div#task-menu button.active {
  height: 55px;
  background-color: #ccc;
  color: black;
}

div#task-menu button.active:hover {
  background-color: #ccc;
  color: black;
}


/********************************************************************
 * Side pane
 *******************************************************************/

.side-panel-hidden {
  width: 100%;
}

.side-panel-shown {
  float: left;

  /* Firefox */
  max-width: -moz-calc(100vw - 600px);
  /* WebKit */
  max-width: -webkit-calc(100vw - 600px);
  /* Opera */
  max-width: -o-calc(100vw - 600px);
  /* Standard */
  max-width: calc(100vw - 600px);
}

div.progress {
  float: right;
  display: block;
  width: 150px;
  margin: 7px 10px 10px;
}

div#task-editor-side-panel {
  float: right;
  right: 10px;

  display: table;
  width: 600px;

  padding: 10px;

  border-top: 5px solid #ccc;
  border-left: 1px solid #ccc;

  /* Firefox */
  height: -moz-calc(100vh - 105px);
  /* WebKit */
  height: -webkit-calc(100vh - 105px);
  /* Opera */
  height: -o-calc(100vh - 105px);
  /* Standard */
  height: calc(100vh - 105px);
}

div#side-pane-hide {
  margin-bottom: 20px;
}

div#side-pane-content {
  /* Firefox */
  max-height: -moz-calc(100vh - 180px);
  /* WebKit */
  max-height: -webkit-calc(100vh - 180px);
  /* Opera */
  max-height: -o-calc(100vh - 180px);
  /* Standard */
  max-height: calc(100vh - 180px);

  overflow: auto;
  margin-bottom: -20px;
}

div#task-side-content table {
  margin-bottom: 0px;
}


/********************************************************************
 * CodeEditor
 *******************************************************************/

div#task-editor-container div.ReactCodeMirror {
  width: 100%;
  overflow: auto;
}


/********************************************************************
 * Tables
 *******************************************************************/

.table-control {
  padding-top: 7px;
}

.table-control input {
  margin-right: 5px;
}


/********************************************************************
 * Results
 *******************************************************************/

 .error {
   color: red;
 }

 .old-result:before {
   content: "*";
 }

